# topometry

./: .gitignore  .pypirc  .readthedocs.yaml  LICENSE  Non_euclid_tutorial.ipynb  README.MD  README.md  TopOMetry_Intro.ipynb  mkdocs.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
docs/: 20Newsgroups_Tutorial.md  Evaluations.md  MNIST.md  MNIST_TopOMetry_Tutorial.md  Makefile  Non_euclidean.md  Non_euclidean_tutorial.md  README.MD  T1_introduction.ipynb  T1_introduction.md  T2_step_by_step.ipynb  T2_step_by_step.md  T3_Integration.md  TopOMetry_Intro.ipynb  TopOMetry_Intro_pbmc_10k.md  TopOMetry_Intro_pbmc_3k.md  a_mnist.md  about.md  b_newsgroups.md  c_classes.md  classes_tutorial.md  conf.py  d_id_estimation.md  diffusor.md  e_evaluations.md  f_scvelo.md  h_non_euclidean.md  index.md  index.rst  installation.md  math_details.md  pbmc3k.md  pbmc68k.md  quickstart.md  readme.md  requirements.txt  run_livereload.py  singlecell.md  test_integration_utilities.ipynb  topograph.md  (+3 more)
docs/_static/: terminology_map.yaml
eval/: local_scores.py
notebooks/: MNIST_TopOMetry_Tutorial.ipynb  Non_euclidean_tutorial.ipynb  a_mnist.ipynb  b_newsgroups.ipynb  c_classes.ipynb  e_evaluations.ipynb  h_non_euclidean.ipynb
site/: 404.html  index.html  search.html  sitemap.xml
site/TopOMetry_Intro_pbmc_10k/: index.html
site/diffusor/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/topograph/: index.html
tests/: test_cca_integration.py  test_cca_mapping.py
topo/: __init__.py  _utils.py  models.py  pipes.py  plot.py  single_cell.py  topograph.py  version.py
topo.egg-info/: PKG-INFO  SOURCES.txt
topo/__pycache__/: umap_layouts.rdist-32.py38.1.nbc
topo/base/: __init__.py  ann.py  dists.py  graphs.py  sparse.py
topo/eval/: __init__.py  global_scores.py  local_scores.py  rmetric.py  topo_metrics.py  trustworthiness.py
topo/layouts/: __init__.py  graph_utils.py  isomap.py  map.py  mde.py  ncvis.py  pac.py  pairwise.py  projector.py  tri.py  trimap.py  uni.py
topo/spectral/: __init__.py  ics.py  (+6 more)
topometry/: __init__.py  models.py  pipes.py  plot.py
topometry.egg-info/: PKG-INFO  SOURCES.txt
(+243 files in other folders)
