[metadata]
name = topometry
version = 0.1.1.0
author = Davi Sidarta-Oliveira
author_email = davisidarta@fcm.unicamp.br
description = A comprehensive dimensional reduction framework to recover latent information from data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davisidarta/topometry
project_urls =
    Bug Tracker = https://github.com/davisidarta/topometry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6

