[metadata]
name = topometry
version = 0.2.0.3
author = Davi Sidarta-Oliveira
author_email = davi.oliveira@dpag.ox.ac.uk
description = A comprehensive dimensional reduction framework to recover latent information from data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davisidarta/topometry
project_urls =
    Bug Tracker = https://github.com/davisidarta/topometry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
install_requires = 
    numpy
    scipy
    scikit-learn
    matplotlib
    pandas
    numba
    setuptools
packages = find:
python_requires = >=3.6

