[metadata]
name = topometry
version = 1.0.2
author = David Sidarta Oliveira
author_email = david.oliveira@dpag.ox.ac.uk
description = Tools for single-cell geometric analysis, clustering and visualization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davisidarta/topometry
project_urls =
    Bug Tracker = https://github.com/davisidarta/topometry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
install_requires = 
    numpy
    scipy
    scikit-learn
    matplotlib
    pandas
    numba
    setuptools
packages = find:
python_requires = >=3.6

